--- a/www/index.html
+++ b/www/index.html
@@ -127,7 +127,7 @@
           </div>
           <div data-role="content">
               <table>
-                  <tr colspan="2"><img id="Image" width="180" src="images/blank.png"></tr>
+                  <tr><td colspan="2" style="text-align: center;"><img id="Image" width="180" src="images/blank.png"></td></tr>
                   <tr><td>Name:</td><td id="Name"></td></tr>
                   <tr><td>Account Name:</td><td id="AccountName"></td></tr>
                   <tr><td>Phone Number:</td><td id="Phone"></td></tr>
