Corrected page header

--- a/www/index.html
+++ b/www/index.html
@@ -123,7 +123,7 @@
       </div> 
       <div data-role="page" data-theme="b" data-add-back-btn="true" id="jqm-detail">
           <div data-role="header">
-              <h1>Account Detail</h1>
+              <h1>Contact Detail</h1>
           </div>
           <div data-role="content">
               <table>
